# mod-warden-chat

./: CMakeLists.txt  README.md
conf/: mod-warden-chat.conf.dist
sql/: setup.sql
src/: WardenChatScript.cpp  loader.cpp
